[gd_scene load_steps=13 format=3 uid="uid://qs68eec7vhuw"]

[ext_resource type="Script" path="res://modules/rooms/refactor_room/refactor_room.gd" id="1_806ux"]
[ext_resource type="PackedScene" uid="uid://407wdynbq2ld" path="res://modules/characters/player/player.tscn" id="2_ogmso"]
[ext_resource type="PackedScene" uid="uid://c8u56vxjpye0m" path="res://modules/characters/enemies/test_enemy/test_enemy.tscn" id="3_euhik"]
[ext_resource type="TileSet" uid="uid://cmkmctdnp03li" path="res://assets/tilesets/test_action_tileset.tres" id="3_yikt6"]
[ext_resource type="PackedScene" uid="uid://dafj2ld6w3ikc" path="res://modules/characters/enemies/fast_enemy/fast_enemy.tscn" id="4_a0nhw"]
[ext_resource type="PackedScene" uid="uid://l31ck38gimwi" path="res://modules/camera/camera.tscn" id="5_faoai"]
[ext_resource type="PackedScene" uid="uid://d18di0xuv174k" path="res://modules/characters/enemies/ranger/ranger.tscn" id="5_l7oe4"]
[ext_resource type="PackedScene" uid="uid://b7wc166dmd3bt" path="res://ui/combat_ui/combat_ui.tscn" id="7_5gm8y"]
[ext_resource type="PackedScene" uid="uid://d07t8fkd5nupg" path="res://modules/combat_manager/combat_manager.tscn" id="7_tvkg2"]
[ext_resource type="PackedScene" uid="uid://fy55thn23ao5" path="res://modules/player_spawn_point/player_spawn_point.tscn" id="8_e5aul"]
[ext_resource type="PackedScene" uid="uid://eae3uik2yex2" path="res://ui/default_ui/default_ui.tscn" id="10_mk6l0"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_o5wjr"]
vertices = PackedVector2Array(0, 0, 400, 0, 400, 272, 0, 272)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(0, 0, 400, 0, 400, 272, 0, 272)])

[node name="RefactorRoom" type="Node2D"]
script = ExtResource("1_806ux")
Player = ExtResource("2_ogmso")
TestEnemy = ExtResource("3_euhik")
FastEnemy = ExtResource("4_a0nhw")
Ranger = ExtResource("5_l7oe4")

[node name="CombatManager" parent="." instance=ExtResource("7_tvkg2")]

[node name="Map" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("3_yikt6")
format = 2
layer_0/name = "Floor"
layer_0/y_sort_enabled = true
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(1048600, 65536, 5, 983064, 65536, 5, 917528, 65536, 5, 851992, 65536, 5, 786456, 65536, 5, 720920, 65536, 5, 655384, 65536, 5, 589848, 65536, 5, 524312, 65536, 5, 458776, 65536, 5, 393240, 65536, 5, 327704, 65536, 5, 262168, 65536, 5, 196632, 65536, 5, 131096, 65536, 5, 65560, 65536, 5, 24, 65536, 5, 1048599, 65536, 5, 983063, 65536, 5, 917527, 65536, 5, 851991, 65536, 5, 786455, 65536, 5, 720919, 65536, 5, 655383, 65536, 5, 589847, 65536, 5, 524311, 65536, 5, 458775, 65536, 5, 393239, 65536, 5, 327703, 65536, 5, 262167, 65536, 5, 196631, 65536, 5, 131095, 65536, 5, 65559, 65536, 5, 23, 65536, 5, 1048598, 65536, 5, 983062, 65536, 5, 917526, 65536, 5, 851990, 65536, 5, 786454, 65536, 5, 720918, 65536, 5, 655382, 65536, 5, 589846, 65536, 5, 524310, 65536, 5, 458774, 65536, 5, 393238, 65536, 5, 327702, 65536, 5, 262166, 65536, 5, 196630, 65536, 5, 131094, 65536, 5, 65558, 65536, 5, 22, 65536, 5, 1048597, 65536, 5, 983061, 65536, 5, 917525, 65536, 5, 851989, 65536, 5, 786453, 65536, 5, 720917, 65536, 5, 655381, 65536, 5, 589845, 65536, 5, 524309, 65536, 5, 458773, 65536, 5, 393237, 65536, 5, 327701, 65536, 5, 262165, 65536, 5, 196629, 65536, 5, 131093, 65536, 5, 65557, 65536, 5, 21, 65536, 5, 1048596, 65536, 5, 983060, 65536, 5, 917524, 65536, 5, 851988, 65536, 5, 786452, 65536, 5, 720916, 65536, 5, 655380, 65536, 5, 589844, 65536, 5, 524308, 65536, 5, 458772, 65536, 5, 393236, 65536, 5, 327700, 65536, 5, 262164, 65536, 5, 196628, 65536, 5, 131092, 65536, 5, 65556, 65536, 5, 20, 65536, 5, 1048595, 65536, 5, 983059, 65536, 5, 917523, 65536, 5, 851987, 65536, 5, 786451, 65536, 5, 720915, 65536, 5, 655379, 65536, 5, 589843, 65536, 5, 524307, 65536, 5, 458771, 65536, 5, 393235, 65536, 5, 327699, 65536, 5, 262163, 65536, 5, 196627, 65536, 5, 131091, 65536, 5, 65555, 65536, 5, 19, 65536, 5, 1048594, 65536, 5, 983058, 65536, 5, 917522, 65536, 5, 851986, 65536, 5, 786450, 65536, 5, 720914, 65536, 5, 655378, 65536, 5, 589842, 65536, 5, 524306, 65536, 5, 458770, 65536, 5, 393234, 65536, 5, 327698, 65536, 5, 262162, 65536, 5, 196626, 65536, 5, 131090, 65536, 5, 65554, 65536, 5, 18, 65536, 5, 1048593, 65536, 5, 983057, 65536, 5, 917521, 65536, 5, 851985, 65536, 5, 786449, 65536, 5, 720913, 65536, 5, 655377, 65536, 5, 589841, 65536, 5, 524305, 65536, 5, 458769, 65536, 5, 393233, 65536, 5, 327697, 65536, 5, 262161, 65536, 5, 196625, 65536, 5, 131089, 65536, 5, 65553, 65536, 5, 17, 65536, 5, 1048592, 65536, 5, 983056, 65536, 5, 917520, 65536, 5, 851984, 65536, 5, 786448, 65536, 5, 720912, 65536, 5, 655376, 65536, 5, 589840, 65536, 5, 524304, 65536, 5, 458768, 65536, 5, 393232, 65536, 5, 327696, 65536, 5, 262160, 65536, 5, 196624, 65536, 5, 131088, 65536, 5, 65552, 65536, 5, 16, 65536, 5, 1048591, 65536, 5, 983055, 65536, 5, 917519, 65536, 5, 851983, 65536, 5, 786447, 65536, 5, 720911, 65536, 5, 655375, 65536, 5, 589839, 65536, 5, 524303, 65536, 5, 458767, 65536, 5, 393231, 65536, 5, 327695, 65536, 5, 262159, 65536, 5, 196623, 65536, 5, 131087, 65536, 5, 65551, 65536, 5, 15, 65536, 5, 1048590, 65536, 5, 983054, 65536, 5, 917518, 65536, 5, 851982, 65536, 5, 786446, 65536, 5, 720910, 65536, 5, 655374, 65536, 5, 589838, 65536, 5, 524302, 65536, 5, 458766, 65536, 5, 393230, 65536, 5, 327694, 65536, 5, 262158, 65536, 5, 196622, 65536, 5, 131086, 65536, 5, 65550, 65536, 5, 14, 65536, 5, 1048589, 65536, 5, 983053, 65536, 5, 917517, 65536, 5, 851981, 65536, 5, 786445, 65536, 5, 720909, 65536, 5, 655373, 65536, 5, 589837, 65536, 5, 524301, 65536, 5, 458765, 65536, 5, 393229, 65536, 5, 327693, 65536, 5, 262157, 65536, 5, 196621, 65536, 5, 131085, 65536, 5, 65549, 65536, 5, 13, 65536, 5, 1048588, 65536, 5, 983052, 65536, 5, 917516, 65536, 5, 851980, 65536, 5, 786444, 65536, 5, 720908, 65536, 5, 655372, 65536, 5, 589836, 65536, 5, 524300, 65536, 5, 458764, 65536, 5, 393228, 65536, 5, 327692, 65536, 5, 262156, 65536, 5, 196620, 65536, 5, 131084, 65536, 5, 65548, 65536, 5, 12, 65536, 5, 1048587, 65536, 5, 983051, 65536, 5, 917515, 65536, 5, 851979, 65536, 5, 786443, 65536, 5, 720907, 65536, 5, 655371, 65536, 5, 589835, 65536, 5, 524299, 65536, 5, 458763, 65536, 5, 393227, 65536, 5, 327691, 65536, 5, 262155, 65536, 5, 196619, 65536, 5, 131083, 65536, 5, 65547, 65536, 5, 11, 65536, 5, 1048586, 65536, 5, 983050, 65536, 5, 917514, 65536, 5, 851978, 65536, 5, 786442, 65536, 5, 720906, 65536, 5, 655370, 65536, 5, 589834, 65536, 5, 524298, 65536, 5, 458762, 65536, 5, 393226, 65536, 5, 327690, 65536, 5, 262154, 65536, 5, 196618, 65536, 5, 131082, 65536, 5, 65546, 65536, 5, 10, 65536, 5, 1048585, 65536, 5, 983049, 65536, 5, 917513, 65536, 5, 851977, 65536, 5, 786441, 65536, 5, 720905, 65536, 5, 655369, 65536, 5, 589833, 65536, 5, 524297, 65536, 5, 458761, 65536, 5, 393225, 65536, 5, 327689, 65536, 5, 262153, 65536, 5, 196617, 65536, 5, 131081, 65536, 5, 65545, 65536, 5, 9, 65536, 5, 1048584, 65536, 5, 983048, 65536, 5, 917512, 65536, 5, 851976, 65536, 5, 786440, 65536, 5, 720904, 65536, 5, 655368, 65536, 5, 589832, 65536, 5, 524296, 65536, 5, 458760, 65536, 5, 393224, 65536, 5, 327688, 65536, 5, 262152, 65536, 5, 196616, 65536, 5, 131080, 65536, 5, 65544, 65536, 5, 8, 65536, 5, 1048583, 65536, 5, 983047, 65536, 5, 917511, 65536, 5, 851975, 65536, 5, 786439, 65536, 5, 720903, 65536, 5, 655367, 65536, 5, 589831, 65536, 5, 524295, 65536, 5, 458759, 65536, 5, 393223, 65536, 5, 327687, 65536, 5, 262151, 65536, 5, 196615, 65536, 5, 131079, 65536, 5, 65543, 65536, 5, 7, 65536, 5, 1048582, 65536, 5, 983046, 65536, 5, 917510, 65536, 5, 851974, 65536, 5, 786438, 65536, 5, 720902, 65536, 5, 655366, 65536, 5, 589830, 65536, 5, 524294, 65536, 5, 458758, 65536, 5, 393222, 65536, 5, 327686, 65536, 5, 262150, 65536, 5, 196614, 65536, 5, 131078, 65536, 5, 65542, 65536, 5, 6, 65536, 5, 1048581, 65536, 5, 983045, 65536, 5, 917509, 65536, 5, 851973, 65536, 5, 786437, 65536, 5, 720901, 65536, 5, 655365, 65536, 5, 589829, 65536, 5, 524293, 65536, 5, 458757, 65536, 5, 393221, 65536, 5, 327685, 65536, 5, 262149, 65536, 5, 196613, 65536, 5, 131077, 65536, 5, 65541, 65536, 5, 5, 65536, 5, 1048580, 65536, 5, 983044, 65536, 5, 917508, 65536, 5, 851972, 65536, 5, 786436, 65536, 5, 720900, 65536, 5, 655364, 65536, 5, 589828, 65536, 5, 524292, 65536, 5, 458756, 65536, 5, 393220, 65536, 5, 327684, 65536, 5, 262148, 65536, 5, 196612, 65536, 5, 131076, 65536, 5, 65540, 65536, 5, 4, 65536, 5, 1048579, 65536, 5, 983043, 65536, 5, 917507, 65536, 5, 851971, 65536, 5, 786435, 65536, 5, 720899, 65536, 5, 655363, 65536, 5, 589827, 65536, 5, 524291, 65536, 5, 458755, 65536, 5, 393219, 65536, 5, 327683, 65536, 5, 262147, 65536, 5, 196611, 65536, 5, 131075, 65536, 5, 65539, 65536, 5, 3, 65536, 5, 1048578, 65536, 5, 983042, 65536, 5, 917506, 65536, 5, 851970, 65536, 5, 786434, 65536, 5, 720898, 65536, 5, 655362, 65536, 5, 589826, 65536, 5, 524290, 65536, 5, 458754, 65536, 5, 393218, 65536, 5, 327682, 65536, 5, 262146, 65536, 5, 196610, 65536, 5, 131074, 65536, 5, 65538, 65536, 5, 2, 65536, 5, 1048577, 65536, 5, 983041, 65536, 5, 917505, 65536, 5, 851969, 65536, 5, 786433, 65536, 5, 720897, 65536, 5, 655361, 65536, 5, 589825, 65536, 5, 524289, 65536, 5, 458753, 65536, 5, 393217, 65536, 5, 327681, 65536, 5, 262145, 65536, 5, 196609, 65536, 5, 131073, 65536, 5, 65537, 65536, 5, 1, 65536, 5, 1048576, 65536, 5, 983040, 65536, 5, 917504, 65536, 5, 851968, 65536, 5, 786432, 65536, 5, 720896, 65536, 5, 655360, 65536, 5, 589824, 65536, 5, 524288, 65536, 5, 458752, 65536, 5, 393216, 65536, 5, 327680, 65536, 5, 262144, 65536, 5, 196608, 65536, 5, 131072, 65536, 5, 65536, 65536, 5, 0, 65536, 5)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-65536, 65536, 0, -65535, 65536, 0, -65534, 65536, 0, -65533, 65536, 0, -65532, 65536, 0, -65531, 65536, 0, -65530, 65536, 0, -65529, 65536, 0, -65528, 65536, 0, -65527, 65536, 0, -65526, 65536, 0, -65525, 65536, 0, -65524, 65536, 0, -65523, 65536, 0, -65522, 65536, 0, -65521, 65536, 0, -65520, 65536, 0, -65519, 65536, 0, -65518, 65536, 0, -65517, 65536, 0, -65516, 65536, 0, -196609, 0, 0, -65515, 65536, 0, -65514, 65536, 0, -65513, 65536, 0, -65512, 65536, 0, -262119, 131072, 0, -196583, 131072, 1, -131047, 131072, 1, -65511, 131072, 1, 25, 131072, 1, 65561, 131072, 1, 131097, 131072, 1, 196633, 131072, 1, 262169, 131072, 1, 327705, 131072, 1, 393241, 131072, 1, 458777, 131072, 1, 524313, 131072, 1, 589849, 131072, 1, 655385, 131072, 1, 720921, 131072, 1, 786457, 131072, 1, 851993, 131072, 1, 917529, 131072, 1, 983065, 131072, 1, 1048601, 131072, 2, -131073, 0, 1, -65537, 0, 1, -1, 0, 1, 65535, 0, 1, 131071, 0, 1, 196607, 0, 1, 262143, 0, 1, 327679, 0, 1, 393215, 0, 1, 458751, 0, 1, 524287, 0, 1, 589823, 0, 1, 655359, 0, 1, 720895, 0, 1, 786431, 0, 1, 851967, 0, 1, 917503, 0, 1, 983039, 0, 1, 1048575, 0, 1, 1114111, 0, 2, 1048576, 0, 3, 1048577, 0, 3, 1048578, 0, 3, 1048579, 0, 3, 1048580, 0, 3, 1048581, 0, 3, 1048582, 0, 3, 1048583, 0, 3, 1048584, 0, 3, 1048585, 0, 3, 1048586, 0, 3, 1048587, 0, 3, 1048588, 0, 3, 1048589, 0, 3, 1048590, 0, 3, 1048591, 0, 3, 1048592, 0, 3, 1048593, 0, 3, 1048594, 0, 3, 1048595, 0, 3, 1048596, 0, 3, 1048597, 0, 3, 1048598, 0, 3, 1048599, 0, 3, 1048600, 0, 3)
layer_2/name = "Collisions"
layer_2/enabled = true
layer_2/modulate = Color(0.788235, 0.164706, 0.164706, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(1114112, 131072, 3, 1114113, 131072, 3, 1114114, 131072, 3, 1114115, 131072, 3, 1114116, 131072, 3, 1114117, 131072, 3, 1114118, 131072, 3, 1114119, 131072, 3, 1114120, 131072, 3, 1114121, 131072, 3, 1114122, 131072, 3, 1114123, 131072, 3, 1114124, 131072, 3, 1114125, 131072, 3, 1114126, 131072, 3, 1114127, 131072, 3, 1114128, 131072, 3, 1114129, 131072, 3, 1114130, 131072, 3, 1114131, 131072, 3, 1114132, 131072, 3, 1114133, 131072, 3, 1114134, 131072, 3, 1114135, 131072, 3, 1114136, 131072, 3)

[node name="TopLeftSpawnLimit" type="Marker2D" parent="Map"]
position = Vector2(16, 16)

[node name="BottomRightSpawnLimit" type="Marker2D" parent="Map"]
position = Vector2(392, 257)

[node name="SpawnPointContainer" type="Node" parent="Map"]

[node name="DefaultSpawnPoint" parent="Map/SpawnPointContainer" instance=ExtResource("8_e5aul")]
position = Vector2(200, 48)

[node name="PlayerSpawnPoint" parent="Map/SpawnPointContainer" instance=ExtResource("8_e5aul")]
position = Vector2(200, 216)
spawn_id = "from_transition_test"

[node name="Camera" parent="." instance=ExtResource("5_faoai")]

[node name="CombatUI" parent="." instance=ExtResource("7_5gm8y")]
visible = false

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_o5wjr")

[node name="DefaultUI" parent="." instance=ExtResource("10_mk6l0")]
